syntax = "proto2";

package com.linbit.linstor.proto.common;

// Volume connection
message VlmConn
{
    optional string vlm_conn_uuid = 1;
    required string node_name_1 = 2;
    required string node_name_2 = 3;
    required string resource_name = 4;
    required sint32 volume_nr = 5;
    optional string vlm_1_uuid = 6;
    optional string vlm_2_uuid = 7;
    map<string, string> volume_conn_props = 8;
}
